force-app/main/default/objects/Registrant_x_Action__c/Registrant_x_Action__c.object-meta.xml
<CustomObject>
    <description
  >An analytic marking the an action taken by an attendee</description>
    <label>Attendee Action</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Registrant x Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendee Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>