force-app/main/default/objects/Registrant_x_Action__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description
  >What did the registrant do (Ex. &quot;Resource Click&quot;)</description>
    <inlineHelpText
  >What did the registrant do (Ex. &quot;Resource Click&quot;)</inlineHelpText>
    <label>Action</label>
    <length>20</length>
    <type>Text</type>
</CustomField>