force-app/main/default/objects/Registrant_x_Action__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description
  >The ID of the related object (ex. Digital_Resource__c)</description>
    <inlineHelpText
  >The ID of the related object (ex. Digital_Resource__c)</inlineHelpText>
    <label>Object</label>
    <length>20</length>
    <type>Text</type>
</CustomField>