force-app/main/default/objects/Registrant_x_Action__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <description>The registrant who consumed the resource</description>
    <inlineHelpText>The registrant who consumed the resource</inlineHelpText>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipName>Registrant_x_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>